--- a/authors.html
+++ b/authors.html
@@ -2,10 +2,12 @@
 layout: default
 title: Authors
 ---
-<ol class="author-list">
-	{% for author in site.data['authors'] %}
-		<li>
-			<a href="{{ author.url | relative_url }}">{{author.name}}</a>
-		</li>
-	{% endfor %}
-</ol>
+<div class="authors-page">
+	<ol class="author-list">
+		{% for author in site.data['authors'] %}
+			<li>
+				<a href="{{ author.url | relative_url }}">{{author.name}}</a>
+			</li>
+		{% endfor %}
+	</ol>
+</div>
